k8s/manifests-ace31b/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-ace31b
  namespace: journee
  labels:
    app: journee-ace31b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-ace31b
  template:
    metadata:
      labels:
        app: journee-ace31b
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-ace31b
          image: gcr.io/my-docker-471807/journee:v5.11.0
          ports:
            - containerPort: 3000
