k8s/manifests-ace31b/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-ace31b
  namespace: journee
spec:
  selector:
    app: journee-ace31b
  ports:
    - port: 80
      targetPort: 3000
