k8s/manifests-ace31b/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journee-ace31b
  namespace: journee
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
    - host: journee-ace31b.aooba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: journee-ace31b
                port:
                  number: 80
